# rope-sim

./: Cargo.toml  README.md
crates/app-eframe/: Cargo.toml
crates/app-eframe/src/: main.rs  scenario.rs
crates/physics/: Cargo.toml
crates/physics/examples/: bending_probe.rs  hybrid_benchmark.rs  rope_calibration.rs  rope_parameter_fit.rs  scenario_report.rs
crates/physics/src/: calibration.rs  config.rs  dynamics.rs  kinematics.rs  lib.rs  math.rs  recorded_scenario.rs  simulation.rs  state.rs  xpbd.rs
crates/physics/src/dynamics/: bending.rs  element.rs
crates/physics/src/integrators/: backward_euler.rs  block_pentadiagonal.rs  block_tridiagonal.rs  mod.rs  newton_block_pentadiagonal.rs  newton_block_tridiagonal.rs  rk4.rs  rosenbrock.rs  semi_implicit_euler.rs  tr_bdf2.rs
crates/physics/src/materials/: hooke.rs  kelvin_voigt.rs  mod.rs  quadratic_kelvin_voigt.rs  standard_linear_solid.rs
crates/physics/tests/: recorded_scenarios.rs  simulation.rs
crates/solver-spike/: Cargo.toml  README.md
crates/solver-spike/src/: main.rs
scenarios/: README.md  bug-1.json  bug-10.json  bug-2.json  bug-3.json  bug-4-1.json  bug-4.json  bug-5.json  bug-6.json  bug-7.json  bug-8-1.json  bug-8.json  recorded-motion.json
