[package]
name = "solver-spike"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
# Diffsol 0.16 currently has unconditional nalgebra re-exports, so its `faer`
# feature does not compile alone. The measured path still uses sparse faer.
diffsol = { version = "0.16.0", default-features = false, features = ["faer", "nalgebra"] }
ropesim-physics = { path = "../physics" }
